# LaserTag

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  TeamBattle  TeamBattleClient  TeamBattleServer  client.cpp  cmake_install.cmake  geometry.cpp  geometry.hpp  player.cpp  protocol.hpp  server.cpp
client/: CMakeLists.txt  client.cpp  client.hpp  main.cpp  ui.cpp  ui.hpp
game/: geometry.cpp  geometry.hpp  player.cpp  player.hpp  protocol.hpp
server/: CMakeLists.txt  main.cpp  server.cpp  server.hpp  session.cpp  session.hpp
